@@ -11,14 +11,13 @@ AUX 0.15.1b/libid3tag-0.15.1b-unknown-encoding.patch 879 RMD160 c4b4ac0a7d013fe0
 AUX 0.15.1b/libid3tag-0.15.1b-utf16.patchlibid3tag-0.15.1b-utf16.patch 583 RMD160 1232e4208b883575f6faabc6f11831264e8af0c9 SHA1 daf621e8123530fdab5193099031074666fc7330 SHA256 487d0c531f3653f8e754d720729cf1cec1bce6e897b845fa61adaaf2668d1568
 AUX id3tag.pc 222 RMD160 fae7791cbdf0d5e4d86a3bb06dcfdcfaa164b859 SHA1 9708c6ec9a571d2e8d926c360c075e81a7c65e54 SHA256 86c6e517864243daffadbd5fa5bd4a9e0c10535f1d1894903dd66c87b8bf594f
 DIST libid3tag-0.15.1b.tar.gz 338143 RMD160 31a69b8ad7684aefdb675acc8ebf89bd6f432095 SHA1 4d867e8a8436e73cd7762fe0e85958e35f1e4306 SHA256 63da4f6e7997278f8a3fef4c6a372d342f705051d1eeb6a46a86b03610e26151
-EBUILD libid3tag-0.15.1b-r2.ebuild 1282 RMD160 141456f04a62c2313755c2b295d53e5915c84eaf SHA1 741877fbf709f8cc8012cf67f9d74e36932970db SHA256 f78400f556ed56fbf2bd1fa07ae980d969001d46ea32048b0cb9f0d19de4fe73
-EBUILD libid3tag-0.15.1b.ebuild 1149 RMD160 aae513d9a89eecabf898a0d3f4db05127e396cc0 SHA1 534c4e70ed321a37d0ff5f853a580b7d00b81d4d SHA256 a2b34b194044ef7b81726770bb98d4bcf211506fab7f32a2366a397687e01b13
-MISC ChangeLog 5708 RMD160 957ef466c455048eedcec43ea4d238c19454a212 SHA1 a03f37a64f8cf8892d1778b664c84a3ca37be716 SHA256 f1a823fec65c38a385c2e2524bf2667515c50c003877c0991c5d119da61e1672
+EBUILD libid3tag-0.15.1b-r2.ebuild 1328 RMD160 68c5078a14c9a40b03837a4ac0581689d3f07aff SHA1 c6fad4d6cf49e596cb9237500398fb9690a875e8 SHA256 b4c3f997a80b5c7f189094d99b2f34794c8accf6741ca86380a93119d3226f5c
+MISC ChangeLog 6010 RMD160 874cf9c8e12e52a054aed6048338e94c715c642d SHA1 bb7134e628e810bdb8406471c2afe2c72ba37890 SHA256 a79f975cc4ca13e167ab4190cd98ecf724fa22715f422fb692c626148cee2dd8
 MISC metadata.xml 248 RMD160 05122080e3580393675ec87101f0eb48aba15ea5 SHA1 8f9b5d80a666c1f111e7a6e61c66a298ed67a408 SHA256 790cfd8d63ed9248363a7e773fd9bdad79266c4153368dceb5109a63b2a2aa8f
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.11 (GNU/Linux)
+Version: GnuPG v2.0.19 (SunOS)
 
-iEYEARECAAYFAkthqeYACgkQNQqtfCuFneMr6ACfbG0QSByi5RqwOAS7RNNekPIE
-f2sAoJPsfXTfxN+B6HGKlkpEB5EdSdVY
-=Pl+y
+iEYEARECAAYFAk+3vtMACgkQX3X2B8XHTom24ACfcTtYVxS3R4yMAHpydJeSggwy
+GzsAni1mz5U4FDZlpzciIl5ljntU5APg
+=3Cr3
 -----END PGP SIGNATURE-----
