@@ -1,6 +1,15 @@
 # ChangeLog for media-libs/libid3tag
-# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/libid3tag/ChangeLog,v 1.42 2008/11/20 16:44:48 vapier Exp $
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/media-libs/libid3tag/ChangeLog,v 1.44 2012/05/09 16:20:13 aballier Exp $
+
+  09 May 2012; Alexis Ballier <aballier@gentoo.org>
+  libid3tag-0.15.1b-r2.ebuild:
+  keyword ~amd64-fbsd
+
+  26 Jan 2011; Samuli Suominen <ssuominen@gentoo.org>
+  libid3tag-0.15.1b-r2.ebuild:
+  Move gperf to DEPEND only wrt #352840 by Mr. Bones. USE="static-libs" and
+  punt useless libtool archive.
 
   28 Jan 2010; Christian Faulhammer <fauli@gentoo.org>
   libid3tag-0.15.1b-r2.ebuild:
